--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -41,6 +41,28 @@
         </li>
 
      </ul>
-    </div>  
+     <div id="social-links">
+        <a href="https://github.com/laisb92" target="_blank">
+            <ion-icon name="logo-github"></ion-icon>
+        </a>
+
+        <a href="https://www.instagram.com/laisbastosteles/" target="_blank">
+            <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+
+        <a href="https://www.linkedin.com/in/lais-bastos-teles-a7432478/" target="_blank">
+        <ion-icon name="logo-linkedin"></ion-icon>
+        </a>    
+        <!--shift + alt + downarrow-->
+    
+     </div>
+     <footer>
+        Feito com ♥ por <a href="https://github.com/laisb92" target="_blank"> Laís</a>
+        </footer>
+    </div>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
     </html>
