--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com"/>
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@500&display=swap" rel="stylesheet"
-        />
 
-        <meta charset="UTF-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Projetos</title>
-        <link rel="stylesheet" href="./style.css"/>
-    </head>
-    <body>
-           <div id="container">
-                <div id="profile">
-                     <img src="./Photos-001/Mobile/avatar-lais.png" alt="Avatar, jaqueta de couro marrom, sorrindo,vestido preto"
-        />
-        <p>@laisbastosteles </p>
-     </div>
-     <ul>
-        <li>
-            <a href="#">Inscrever-se no NLW</a>
-        </li>
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@500&display=swap" rel="stylesheet" />
 
-        <li>
-            <a href="#">Baixar meu e-book</a>
-        </li>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projetos</title>
+    <link rel="stylesheet" href="./style.css" />
+</head>
 
-        <li>
-             <a href="https://github.com/laisb92"
-                target="_blank"
-             >Veja meu portifólio</a>
-        </li>
+<body>
+    <div id="container">
+        <div id="profile">
+            <img src="./images/avatar-lais.png"
+                alt="Avatar, jaqueta de couro marrom, sorrindo,vestido preto" />
+            <p>@laisbastosteles </p>
+        </div>
 
-        <li>
-             <a href="https://www.linkedin.com/in/lais-bastos-teles-a7432478/"
-             target="_blank"
-             >Conheça meu Linkedin</a>
-        </li>
+        <div id="swicht" onclick="toggleMode()">
+            <button ></button>
+            <span></span>
+        </div>
 
-     </ul>
-     <div id="social-links">
-        <a href="https://github.com/laisb92" target="_blank">
-            <ion-icon name="logo-github"></ion-icon>
-        </a>
+        <ul>
+            <li>
+                <a href="https://github.com/laisb92" target="_blank">Veja meu portifólio</a>
+            </li>
 
-        <a href="https://www.instagram.com/laisbastosteles/" target="_blank">
-            <ion-icon name="logo-instagram"></ion-icon>
-        </a>
+            <li>
+                <a href="https://www.linkedin.com/in/lais-bastos-teles-a7432478/" target="_blank">Conheça meu
+                    Linkedin</a>
+            </li>
 
-        <a href="https://www.linkedin.com/in/lais-bastos-teles-a7432478/" target="_blank">
-        <ion-icon name="logo-linkedin"></ion-icon>
-        </a>    
-        <!--shift + alt + downarrow-->
-    
-     </div>
-     <footer>
-        Feito com ♥ por <a href="https://github.com/laisb92" target="_blank"> Laís</a>
+        </ul>
+
+        <div id="social-links">
+            <a href="https://github.com/laisb92" target="_blank">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
+
+            <a href="https://www.instagram.com/laisbastosteles/" target="_blank">
+                <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+
+            <a href="https://www.linkedin.com/in/lais-bastos-teles-a7432478/" target="_blank">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+            <!--shift + alt + downarrow-->
+        </div>
+
+        <footer>
+            Feito com ♥ por <a href="https://github.com/laisb92" target="_blank"> Laís</a>
         </footer>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    </body>
-    </html>
+
+    <script src="./script.js"></script>
+</body>
+
+</html>
