--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -21,7 +21,7 @@
             <p>@laisbastosteles </p>
         </div>
 
-        <div id="swicht" onclick="toggleMode()">
+        <div id="switch" onclick="toggleMode()">
             <button></button>
             <span></span>
         </div>
